--- a/ModernizeYourDatabases2019/ModernizeSQL2019/01-WhySQL2019.md
+++ b/ModernizeYourDatabases2019/ModernizeSQL2019/01-WhySQL2019.md
@@ -12,5 +12,5 @@ This module will be completed at a later date.
 
 <p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/geopin.png"><b >Next Steps</b></p>
 
-Next, Continue to <a href="02-IntelligentPerformance
-" target="_blank"><i> Intelligent Performance</i></a>.
+Next, Continue to <a href="02-IntelligentPerformance.md"
+target="_blank"><i> Intelligent Performance</i></a>.
