--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_04.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_04.ipynb
@@ -26,8 +26,27 @@
             "cell_type": "code",
             "source": "# Read the product reviews CSV files into a spark data frame, print schema & top rows\r\nresults = spark.read.option(\"inferSchema\", \"true\").csv('/product_review_data').toDF(\"Item_ID\", \"Review\")",
             "metadata": {},
-            "outputs": [],
-            "execution_count": 4
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "Starting Spark application\n",
+                    "output_type": "stream"
+                },
+                {
+                    "data": {
+                        "text/plain": "<IPython.core.display.HTML object>",
+                        "text/html": "<table>\n<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>1</td><td>application_1554980453988_0002</td><td>pyspark3</td><td>idle</td><td><a target=\"_blank\" href=\"https://192.168.1.11:30443/gateway/default/yarn/proxy/application_1554980453988_0002/\">Link</a></td><td><a target=\"_blank\" href=\"http://mssql-storage-pool-default-0.service-storage-pool-default.minikube.svc.cluster.local:8042/node/containerlogs/container_1554980453988_0002_01_000001/root\">Link</a></td><td>✔</td></tr></table>"
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                },
+                {
+                    "name": "stdout",
+                    "text": "SparkSession available as 'spark'.\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 2
         },
         {
             "cell_type": "code",
@@ -38,10 +57,16 @@
         },
         {
             "cell_type": "code",
-            "source": "# Execute Spark SQL commands\r\nsqlDF = spark.sql(\"SELECT * FROM Product_Reviews LIMIT 10\")\r\nsqlDF.show()",
+            "source": "# Execute Spark SQL commands\r\nsqlDF = spark.sql(\"SELECT * FROM Top_Product_Reviews LIMIT 10\")\r\nsqlDF.show()",
             "metadata": {},
-            "outputs": [],
-            "execution_count": 8
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "+-------+--------------------+\n|Item_ID|              Review|\n+-------+--------------------+\n|  72621|Works fine. Easy ...|\n|  89334|great product to ...|\n|  89335|Next time will go...|\n|  84259|Great Gift Great ...|\n|  84398|After trip to Par...|\n|  66434|Simply the best t...|\n|  66501|This is the exact...|\n|  66587|Not super magnet;...|\n|  66680|Installed as bath...|\n|  66694|Our home was buil...|\n+-------+--------------------+",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 9
         }
     ]
 }
