--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -76,8 +76,8 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
 2. Run the following commands to shutdown SQL Server. You can also use the script **step1_stop_container.sh**:
 
-    `SERVERIP=$(kubectl get service | grep mssql-service | awk {'print $4'})`
-    `PORT=31433`
+    `SERVERIP=$(kubectl get service | grep mssql-service | awk {'print $4'})`<br>
+    `PORT=31433`<br>
     `sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SHUTDOWN WITH NOWAIT"`
 
     You should see the following output from the shell
@@ -92,8 +92,8 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
 3. Execute the following commands to test SQL Server is running. You can also use the script step2_test_sql.sh
 
-    `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`
-    `PORT=31433`
+    `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
+    `PORT=31433`<br>
     `sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`
 
     Your output should look like the following
@@ -141,8 +141,8 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
 5. If you have completed the steps in Module 02, then you restored the database WideWorldImporters to the container. And since the container uses a PersistentVolumeClaim, the WideWorldImporters should have the same data. Execute the following commands or the script **step4_find_people.sh** to query the database:
 
-    `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`
-    `PORT=31433`
+    `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
+    `PORT=31433`<br>
     `sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"USE WideWorldImporters;SELECT TOP 10 FullName, PhoneNumber, EmailAddress FROM [Application].[People] ORDER BY FullName;" -Y30`
 
     You should get the same results of data as you did in Module 02. Notice in this example, you connect to SQL Server with the Load Balancer service IP address and port since you cannot determine what the IP address will be of the SQL Server container as it gets recreated on the same or other nodes.
@@ -184,8 +184,8 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
 1. Execute the following commands to take note of the version of SQL Server. You can also execute the script **step2_test_sql.sh**
 
-    `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`
-    `PORT=31433`
+    `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
+    `PORT=31433`<br>
     `sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`
 
 Depending on what image was used for your workshop, the output should be reflective of the version of SQL Server deployed. In this example, the image used was for SQL Server 2019 CTP 2.2 for Red Hat Enterprise Linux.
@@ -227,8 +227,8 @@ Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
 
 4. Run the following commands to see the SQL Server version updates. You can also use the script **step2_test_sql.sh**
 
-    `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`
-    `PORT=31433`
+    `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
+    `PORT=31433`<br>
     `sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`
 
     The SQL Server container will move to a state of running, but internally the SQL Server engine must update the metadata for system and user databases. This process should only take a few minutes, but any attempt to connect to SQL Server before this completes can result in the following error
