cleanup several of the readme files, removed autotune part of module 3, and added T-SQL scripts for Module 3

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -63,7 +63,9 @@ Proceed to the Activity to see examples of how OpenShift provides high availabil
 
 Follow these steps to see how high availability works with SQL Server on OpenShift using replicas, PersistentVolumeClaims, and Load Balancers.
 
-1. One of the simple methods for High Availabilty for OpenShift is at the container level. Since SQL Server is the main program in the container, if SQL Server is shutdown or crashes, OpenShift will automatically restart the container in the same pod and node. Run the following commands to see the status of the current pod deployed for the project you created in Module 01.
+1. Open a shell prompt and change to the **SQLonOpenShift/sqlonopenshift/04_HA** directory.
+
+2. One of the simple methods for High Availability for OpenShift is at the container level. Since SQL Server is the main program in the container, if SQL Server is shutdown or crashes, OpenShift will automatically restart the container in the same pod and node. Run the following commands to see the status of the current pod deployed for the project you created in Module 01.
 
     `oc get pods -o wide`
 
@@ -74,7 +76,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Take note of the pod name (under the NAME column), the IP address, and the NODE name (If your cluster has only one node, the node name will not change throughout this activity).
 
-2. Run the following commands to shutdown SQL Server. You can also use the script **step1_stop_container.sh**:
+3. Run the following commands to shutdown SQL Server. You can also use the script **step1_stop_container.sh**:
 
     `SERVERIP=$(kubectl get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
@@ -90,7 +92,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Note the pod name, IP address, and node have not changed. The STATUS should be Running.
 
-3. Execute the following commands to test SQL Server is running. You can also use the script step2_test_sql.sh
+4. Execute the following commands to test SQL Server is running. You can also use the script step2_test_sql.sh
 
     `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
@@ -108,7 +110,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Depending on how long it takes OpenShift to restart the container, your reconnection make take longer than a few seconds.
 
-4. Since you deployed the SQL Server container in a pod using 1 replica, if there is a failure of the pod in a node, OpenShift will attempto to create a new pod and schedule it on the appropriate available node. For SQL Server, this is like a *failover* since OpenShift will start a new SQL Server container but pointing to the same PersistentVolumeClaim,  hence the same system and user databases. And the LoadBalancer acts like a *listener* so if the new SQL Server container has a new IP address, the application still connects to the same Load Balancer IP address.
+5. Since you deployed the SQL Server container in a pod using 1 replica, if there is a failure of the pod in a node, OpenShift will attempto to create a new pod and schedule it on the appropriate available node. For SQL Server, this is like a *failover* since OpenShift will start a new SQL Server container but pointing to the same PersistentVolumeClaim,  hence the same system and user databases. And the LoadBalancer acts like a *listener* so if the new SQL Server container has a new IP address, the application still connects to the same Load Balancer IP address.
 
     **Note**: Ths is not the same as a SQL Server Availability Group which will be discussed in Module 05, Using an Operator with SQL Server on OpenShift.
 
@@ -139,7 +141,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     The output of this command should have a new pod name but start with the name **mssql-deployment**. The IP address should also be different and depending on your OpenShift cluster configuration the pod could be scheduled on a new node. When the pod status is Running, you should be able to access SQL Server
 
-5. If you have completed the steps in Module 02, then you restored the database WideWorldImporters to the container. And since the container uses a PersistentVolumeClaim, the WideWorldImporters should have the same data. Execute the following commands or the script **step4_find_people.sh** to query the database:
+6. If you have completed the steps in Module 02, then you restored the database WideWorldImporters to the container. And since the container uses a PersistentVolumeClaim, the WideWorldImporters should have the same data. Execute the following commands or the script **step4_find_people.sh** to query the database:
 
     `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
@@ -182,7 +184,9 @@ Proceed to the Activity to learn how to update SQL Server but keep your database
 
 In this activity, you will use OpenShift commands to deploy an update to the release of SQL Server with no change to user data and minimize application downtime.
 
-1. Execute the following commands to take note of the version of SQL Server. You can also execute the script **step2_test_sql.sh**
+1. Open a shell prompt and change to the **SQLonOpenShift/sqlonopenshift/04_HA** directory.
+
+2. Execute the following commands to take note of the version of SQL Server. You can also execute the script **step2_test_sql.sh**
 
     `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
@@ -196,7 +200,7 @@ Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
         Copyright (C) 2018 Microsoft Corporation
         Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64</pre>
 
-2. Execute the following commands to update the image of the SQL Server deployment from Module 01 to SQL Server 2019 CTP 2.3. You can also use the script **step5_update_sql.sh**
+3. Execute the following commands to update the image of the SQL Server deployment from Module 01 to SQL Server 2019 CTP 2.3. You can also use the script **step5_update_sql.sh**
 
     `oc --record deployment set image mssql-deployment mssql=mcr.microsoft.com/mssql/rhel/server:2019-CTP2.3`
 
@@ -204,7 +208,7 @@ Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
 
     <pre>deployment.extensions/mssql-deployment image updated</pre>
 
-3. Execute the commands to see the status of the image update to the deployment
+4. Execute the commands to see the status of the image update to the deployment
 
     `oc get all`
 
@@ -225,7 +229,7 @@ Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
 
     The time it takes to run the new pod and container could be several minutes as the OpenShift cluster may not have the new container image for SQL 2019 CTP 2.3 in its local docker registry. Once the new container is Running, you can connect to SQL Server. Notice also in this output the previous pod is stopped but available to restart, which is part of the process to rollback should you be using a cumulative update strategy.
 
-4. Run the following commands to see the SQL Server version updates. You can also use the script **step2_test_sql.sh**
+5. Run the following commands to see the SQL Server version updates. You can also use the script **step2_test_sql.sh**
 
     `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
@@ -245,7 +249,7 @@ Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
 
     (1 rows affected)</pre>
 
-5. If you are going to proceed and complete Module 05, you need to cleanup resources. This can be done by running the following commands. You can also execute the script **step6_cleanup.sh**
+6. If you are going to proceed and complete Module 05, you need to cleanup resources. This can be done by running the following commands. You can also execute the script **step6_cleanup.sh**
 
     `oc delete project mssql`
     `oc project default`
