added in diagram for module 4 and cleaned up a few formatting issues

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -53,7 +53,11 @@ spec:
       targetPort: 1433
   type: LoadBalancer</pre>
 
-The LoadBalancer service in OpenShift will have a consistent IP address and port (31433) that will always map to the private IP address for the SQL Server container and port 1433, which is the default port for the SQL Server database engine. So even if OpenShift has to deploy a new SQL SErver container with a new private IP address, the LoadBalancer will always be directed to the correct SQL Server.
+The LoadBalancer service in OpenShift will have a consistent IP address and port (31433) that will always map to the private IP address for the SQL Server container and port 1433, which is the default port for the SQL Server database engine. So even if OpenShift has to deploy a new SQL Server container with a new private IP address, the LoadBalancer will always be directed to the correct SQL Server.
+
+The following diagram is a simple visual on how OpenShift provides built-in High Availability
+
+![k8s HA](../graphics/k8s_high_availability.jpg)
 
 Proceed to the Activity to see examples of how OpenShift provides high availability for SQL Server.
 
@@ -192,10 +196,10 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
     `PORT=31433`<br>
     `sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SELECT @@version"`
 
-Depending on what image was used for your workshop, the output should be reflective of the version of SQL Server deployed. In this example, the image used was for SQL Server 2019 CTP 2.2 for Red Hat Enterprise Linux.
+    Depending on what image was used for your workshop, the output should be reflective of the version of SQL Server deployed. In this example, the image used was for SQL Server 2019 CTP 2.2 for Red Hat Enterprise Linux.
 
-<pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
+    <pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+    Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
         Dec  5 2018 16:51:26
         Copyright (C) 2018 Microsoft Corporation
         Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64</pre>
@@ -263,7 +267,7 @@ Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
 <p><img style="margin: 0px 15px 15px 0px;" src="../graphics/owl.png"><b>For Further Study</b></p>
 
 - [High Availability for SQL Server on Kubernetes](https://docs.microsoft.com/en-us/sql/linux/tutorial-sql-server-containers-kubernetes?view=sql-server-2017#ha-solution-on-kubernetes-running-in-azure-kubernetes-service)
-- [High Availability for SQL Server Containers](https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-container-ha-overview)ca
+- [High Availability for SQL Server Containers](https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-container-ha-overview)
 
 <p style="border-bottom: 1px solid lightgrey;"></p>
 
