formatting changes for all modules and completed 5.1 for module 5

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -75,8 +75,8 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
      The output of this command should look something like the following. Take note of the xxxxxx
 
-    <pre>NAME                                READY     STATUS    RESTARTS   AGE       IP            NODE                NOMINATED NODE
-    mssql-deployment-6d8844988b-j9r84   1/1       Running   0          3m        10.129.0.15   ocpcluster-node01   none</pre>
+   <pre>NAME                                READY     STATUS    RESTARTS   AGE       IP            NODE                NOMINATED NODE
+   mssql-deployment-6d8844988b-j9r84   1/1       Running   0          3m        10.129.0.15   ocpcluster-node01   none</pre>
 
     Take note of the pod name (under the NAME column), the IP address, and the NODE name (If your cluster has only one node, the node name will not change throughout this activity).
 
@@ -88,7 +88,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     You should see the following output from the shell
 
-    <pre>Server shut down by NOWAIT request from login sa</pre>
+   <pre>Server shut down by NOWAIT request from login sa</pre>
 
     Now run the command again to see the pod status
 
@@ -104,13 +104,13 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Your output should look like the following
 
-    <pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-    Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
+   <pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+   Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
         Dec  5 2018 16:51:26
         Copyright (C) 2018 Microsoft Corporation
         Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64                          
 
-    (1 rows affected)</pre>
+   (1 rows affected)</pre>
 
     Depending on how long it takes OpenShift to restart the container, your reconnection make take longer than a few seconds.
 
@@ -124,7 +124,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Run the following commands to delete the node for the pod for SQL Server container. You can also use the script **step3_pod_failure.sh**. In this example, you can take advantage of the label used to create the SQL Server pod. This was defined in the following yaml fragment from Module 01
 
-    <pre>template:
+   <pre>template:
         metadata:
           labels:
             app: mssql</pre>
@@ -133,7 +133,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     The output of this command should look like the following:
 
-    <pre>pod "mssql-deployment-6d8844988b-j9r84" deleted</pre>
+   <pre>pod "mssql-deployment-6d8844988b-j9r84" deleted</pre>
 
     and then you are returned to the command prompt
 
@@ -198,8 +198,8 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
     Depending on what image was used for your workshop, the output should be reflective of the version of SQL Server deployed. In this example, the image used was for SQL Server 2019 CTP 2.2 for Red Hat Enterprise Linux.
 
-    <pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-    Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
+   <pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+   Microsoft SQL Server 2019 (CTP2.2) - 15.0.1200.24 (X64)
         Dec  5 2018 16:51:26
         Copyright (C) 2018 Microsoft Corporation
         Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64</pre>
@@ -210,7 +210,7 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
     The output of this command should look like
 
-    <pre>deployment.extensions/mssql-deployment image updated</pre>
+   <pre>deployment.extensions/mssql-deployment image updated</pre>
 
 4. Execute the commands to see the status of the image update to the deployment
 
@@ -218,16 +218,16 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
     The output of this command while the new pod with the new image is getting created should look something like this
 
-    <pre>NAME                                    READY     STATUS              RESTARTS   AGE
-    pod/mssql-deployment-6748c8d9ff-wqstc   0/1       ContainerCreating   0          1m
+   <pre>NAME                                    READY     STATUS              RESTARTS   AGE
+   pod/mssql-deployment-6748c8d9ff-wqstc   0/1       ContainerCreating   0          1m
 
-    NAME                    TYPE           CLUSTER-IP       EXTERNAL-IP     PORT(S)           AGE
-    service/mssql-service   LoadBalancer   172.30.241.155   13.82.210.117   31433:31372/TCP   38m
+   NAME                    TYPE           CLUSTER-IP       EXTERNAL-IP     PORT(S)           AGE
+   service/mssql-service   LoadBalancer   172.30.241.155   13.82.210.117   31433:31372/TCP   38m
 
-    NAME                               DESIRED   CURRENT   UP-TO-DATE   AVAILABLE   AGE
+   NAME                               DESIRED   CURRENT   UP-TO-DATE   AVAILABLE   AGE
     deployment.apps/mssql-deployment   1         1         1            0           38m
 
-    NAME                                          DESIRED   CURRENT   READY     AGE
+   NAME                                          DESIRED   CURRENT   READY     AGE
     replicaset.apps/mssql-deployment-6748c8d9ff   1         1         0         1m
     replicaset.apps/mssql-deployment-6d8844988b   0         0         0         38m</pre>
 
@@ -241,17 +241,17 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
     The SQL Server container will move to a state of running, but internally the SQL Server engine must update the metadata for system and user databases. This process should only take a few minutes, but any attempt to connect to SQL Server before this completes can result in the following error
 
-    <pre>Sqlcmd: Error: Microsoft ODBC Driver 17 for SQL Server : Login failed for user 'sa'. Reason: Server is in script upgrade mode. Only administrator can connect at this time..</pre>
+   <pre>Sqlcmd: Error: Microsoft ODBC Driver 17 for SQL Server : Login failed for user 'sa'. Reason: Server is in script upgrade mode. Only administrator can connect at this time..</pre>
 
     Within a few minutes, the above command or script should product results like the following
 
-    <pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-    Microsoft SQL Server 2019 (CTP2.3) - 15.0.1300.359 (X64)
+   <pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+   Microsoft SQL Server 2019 (CTP2.3) - 15.0.1300.359 (X64)
         Feb 15 2019 23:50:43
         Copyright (C) 2019 Microsoft Corporation
-        Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) <X64>                          
+        Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)) X64                          
 
-    (1 rows affected)</pre>
+   (1 rows affected)</pre>
 
 6. If you are going to proceed and complete Module 05, you need to cleanup resources. This can be done by running the following commands. You can also execute the script **step6_cleanup.sh**
 
@@ -260,7 +260,7 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
     When this completes, you should see the following output and be placed back at the shell prompt
 
-    <pre>project.project.openshift.io "mssql" deleted<br>Now using project "default" on server "https://masterdnsx5rquio6c54pu.eastus.cloudapp.azure.com:443".</pre>
+   <pre>project.project.openshift.io "mssql" deleted<br>Now using project "default" on server "https://masterdnsx5rquio6c54pu.eastus.cloudapp.azure.com:443".</pre>
 
 <p style="border-bottom: 1px solid lightgrey;"></p>
 
