formats and cleanup

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -260,7 +260,9 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
     When this completes, you should see the following output and be placed back at the shell prompt
 
-   <pre>project.project.openshift.io "mssql" deleted<br>Now using project "default" on server "https://masterdnsx5rquio6c54pu.eastus.cloudapp.azure.com:443".</pre>
+   <pre>project.project.openshift.io "mssql" deleted<br>Now using project "default" on server "https://[masterconsoleurl]:443".</pre>
+
+You can now proceed to Next Steps to learn more about using operators and SQL Server Always On Availability Groups.
 
 <p style="border-bottom: 1px solid lightgrey;"></p>
 
