--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -23,7 +23,7 @@ You'll cover the following topics in this Module:
 
 In this module you will learn how to use the built-in capabilities of OpenShift for high availability for SQL Server.
 
-<pre>Note: This Module assumes you have at minimum, compled Module 01, Deploy SQL Server on OpenShift. One of the steps in the Activity with 4.1 requires you to complete all the steps in Module 02, Connect and Query SQL Server</pre>
+<pre>Note: This Module assumes you have at minimum, completed Module 01, Deploy SQL Server on OpenShift, and Module 02, Connect and Query.</pre>
 
 OpenShift, which is based on Kubernetes, allows you to deploy a pod and specify a declaration for a number of replicas to be deployed. In previous modules, you deployed a SQL Server container in a single pod on OpenShift. You used a declarative yaml file to instruct OpenShift how to deploy SQL Server with a replica. The fragment of the yaml file looks like
 
@@ -96,7 +96,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Note the pod name, IP address, and node have not changed. The STATUS should be Running.
 
-4. Execute the following commands to test SQL Server is running. You can also use the script step2_test_sql.sh
+4. Execute the following commands to test SQL Server is running. You can also use the script **step2_test_sql.sh**
 
     `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
     `PORT=31433`<br>
@@ -114,7 +114,7 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
     Depending on how long it takes OpenShift to restart the container, your reconnection make take longer than a few seconds.
 
-5. Since you deployed the SQL Server container in a pod using 1 replica, if there is a failure of the pod in a node, OpenShift will attempto to create a new pod and schedule it on the appropriate available node. For SQL Server, this is like a *failover* since OpenShift will start a new SQL Server container but pointing to the same PersistentVolumeClaim,  hence the same system and user databases. And the LoadBalancer acts like a *listener* so if the new SQL Server container has a new IP address, the application still connects to the same Load Balancer IP address.
+5. Since you deployed the SQL Server container in a pod using 1 replica, if there is a failure of the pod in a node, OpenShift will attempt to to create a new pod and schedule it on the appropriate available node. For SQL Server, this is like a *failover* since OpenShift will start a new SQL Server container but pointing to the same PersistentVolumeClaim,  hence the same system and user databases. And the LoadBalancer acts like a *listener* so if the new SQL Server container has a new IP address, the application still connects to the same LoadBalancer IP address.
 
     **Note**: Ths is not the same as a SQL Server Availability Group which will be discussed in Module 05, Using an Operator with SQL Server on OpenShift.
 
@@ -151,7 +151,9 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
     `PORT=31433`<br>
     `sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"USE WideWorldImporters;SELECT TOP 10 FullName, PhoneNumber, EmailAddress FROM [Application].[People] ORDER BY FullName;" -Y30`
 
-    You should get the same results of data as you did in Module 02. Notice in this example, you connect to SQL Server with the Load Balancer service IP address and port since you cannot determine what the IP address will be of the SQL Server container as it gets recreated on the same or other nodes.
+    You should get the same results of data as you did in Module 02. Notice in this example, you connect to SQL Server with the LoadBalancer service IP address and port since you cannot determine what the IP address will be of the SQL Server container as it gets recreated on the same or other nodes.
+
+Proceed to the next section of this module to learn how to update SQL Server while keeping it highly available.
 
 <p style="border-bottom: 1px solid lightgrey;"></p>
 
@@ -159,9 +161,9 @@ Follow these steps to see how high availability works with SQL Server on OpenShi
 
 To update the version of the SQL Server software outside a container, you would normally use a package manger command such as **yum update**.
 
-However, package management software is not normally installed in the SQL Server container. Furthermore, the principle of containers is to use a consistent image. So the challenge of update the SQL Server software is that you want your running SQL Server container to keep the same set of databases and data but you want a new SQL server container with a new updated image to connect to the databases.
+However, package management software is not normally installed in the SQL Server container. Furthermore, the principle of containers is to use a consistent image. So the challenge to update the SQL Server software is that you want your running SQL Server container to keep the same set of databases and data but you want a new SQL server container with a new updated image to connect to the databases.
 
-Fortunately, the SQL Server engine is aware of the version it is running under when it starts up and can detect the compatible versions of metadata within system and user databases. Therefore, if you start a new container using the same PersistentVolumeClaim of your databases from the container with the older version image, SQL Server can be updated in a highly available fashion.
+Fortunately, the SQL Server engine is aware of the version it is running under when it starts up and can detect the compatible versions of metadata within system and user databases. Therefore, if you start a new container using the same PersistentVolumeClaim of your databases from the container with the newer version image, SQL Server can be updated in a highly available fashion.
 
 When you deploy your pod with SQL Server on OpenShift you can declare the deployment to stop the container and recreate a new one if you indicate to OpenShift that the image should be updated for the deployment.
 
@@ -176,7 +178,7 @@ spec:
   strategy:
     type: Recreate</pre>
 
-Note: SQL Server can be updated from a lower major release to a new one such as SQL Server 2017 to SQL Server 2019. However, you cannot rollback a major version update. SQL Server has a concept of minor updates called a *cumulative update*. Cumulative updates with a major SQL Server version are compatible to update and rollback. SQL Server releases in preview called Community Technology Preview (CTP) builds are treated like major releases. So you can update for example from SQL Server 2019 CTP 2.2 to 2.3 but you cannot rollback.
+**Note**: SQL Server can be updated from a lower major release to a new one such as SQL Server 2017 to SQL Server 2019. However, you cannot rollback a major version update. SQL Server has a concept of minor updates called a *cumulative update*. Cumulative updates with a major SQL Server version are compatible to update and rollback. SQL Server releases in preview called Community Technology Preview (CTP) builds are treated like major releases. So you can update for example from SQL Server 2019 CTP 2.2 to 2.3 but you cannot rollback.
 
 This workshop as of April 2019 uses SQL 2019 CTP builds and therefore there is no exercise to rollback but future versions of this workshop will include a rollback exercise between SQL 2019 cumulative updates.
 
@@ -243,7 +245,7 @@ In this activity, you will use OpenShift commands to deploy an update to the rel
 
    <pre>Sqlcmd: Error: Microsoft ODBC Driver 17 for SQL Server : Login failed for user 'sa'. Reason: Server is in script upgrade mode. Only administrator can connect at this time..</pre>
 
-    Within a few minutes, the above command or script should product results like the following
+    Within a few minutes, the above command or script if run again should product results like the following:
 
    <pre>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
    Microsoft SQL Server 2019 (CTP2.3) - 15.0.1300.359 (X64)
